--- a/Project3.html
+++ b/Project3.html
@@ -5,11 +5,11 @@
     <title>Marco's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="PortfolioStyle.css">
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
-    <link rel="icon" href="M (1).png">
+    <link rel="icon" href="pictures/M (1).png">
 </head>
 <body>
     <header>
-        <img class="logo" src="M (1).png">
+        <img class="logo" src="pictures/M (1).png">
         <nav>
             <ul class="nav-list">
                 <li class="nav-item">   
@@ -47,7 +47,7 @@
                 To view the project, please view the <a href="https://github.com/MarcoDava/Tic-Tac-Toe" class="link">the Github repository</a>.
             </p>
             <! -- Add a picture of the web application here-->
-            <img src="TicTacToeImage.jpg" class="Project-Images">
+            <img src="pictures/TicTacToeImage.jpg" class="Project-Images">
             <h1 class="Intro">Tic Tac Toe</h1>
             <p class="Project1-Desc">
                 Timeline : November 2024 - December 2024<br>
@@ -81,11 +81,11 @@
             </h2>
             <ul class="Skills-List">
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="java.png" alt="Java Logo">
+                    <img class="Skills-Icons" src="pictures/java.png" alt="Java Logo">
                     <p class="Skills-Desc">Java</p>
                 </li>
                 <li class="Skills-Item">    
-                    <img class="Skills-Icons" src="Maven.png" alt="Maven Logo">
+                    <img class="Skills-Icons" src="pictures/Maven.png" alt="Maven Logo">
                     <p class="Skills-Desc">Maven</p>    
                 </li>
             </ul>
@@ -95,22 +95,22 @@
         <ul class="Socials-List">
             <li class="Socials-Item">
                 <a href="https://www.linkedin.com/in/marcodava/">
-                    <img class="Socials-Icons" src="linkedin.png" alt="LinkedIn Logo">
+                    <img class="Socials-Icons" src="pictures/linkedin.png" alt="LinkedIn Logo">
                 </a>
             </li>
             <li class="Socials-Item">
                 <a href="https://github.com/MarcoDava">
-                    <img class="Socials-Icons" src="63de5479e8eb4676570c49e2579cab01.jpg" alt="Github Logo">
+                    <img class="Socials-Icons" src="pictures/63de5479e8eb4676570c49e2579cab01.jpg" alt="Github Logo">
                 </a>
             </li>
             <li class="Socials-Item">
                 <a href="https://mail.google.com/mail/?view=cm&fs=1&to=marco.a.dava@gmail.com&su=Hey There!&body=Email whatever you desire">
-                    <img class="Socials-Icons" src="325a4bd7b5041b4455e9a0b64c92190d.png" alt="Gmail Logo">
+                    <img class="Socials-Icons" src="pictures/325a4bd7b5041b4455e9a0b64c92190d.png" alt="Gmail Logo">
                 </a>
             </li>
             <li class="Socials-Item">
                 <a href="https://leetcode.com/u/MarcoDava/">
-                    <img class="Socials-Icons" src="leetcode-icon-430x512-6l72chsk-modified.png" alt="Leetcode Logo">
+                    <img class="Socials-Icons" src="pictures/leetcode-icon-430x512-6l72chsk-modified.png" alt="Leetcode Logo">
                 </a>
             </li>
         </ul>
