--- a/Project4.html
+++ b/Project4.html
@@ -5,11 +5,11 @@
     <title>Marco's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="PortfolioStyle.css">
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
-    <link rel="icon" href="M (1).png">
+    <link rel="icon" href="pictures/M (1).png">
 </head>
 <body>
     <header>
-        <img class="logo" src="M (1).png">
+        <img class="logo" src="pictures/M (1).png">
         <nav>
             <ul class="nav-list">
                 <li class="nav-item">   
@@ -44,7 +44,7 @@
     <main>
         <section class="Project3">
             <! -- Add a picture of the web application here-->
-            <img src="Qbot2(1).jpg" class="Project-Images">
+            <img src="pictures/Qbot2(1).jpg" class="Project-Images">
             <h1 class="Intro">Q bot Pathing Algorithm</h1>
             <p class="Project1-Desc">
                 Timeline : January 2024 - February 2024<br>
@@ -64,7 +64,7 @@
                 did not come without any issues.
             </p>
             <br>
-            <img src="QbotProgram.png" class="Project-Images">
+            <img src="pictures/QbotProgram.png" class="Project-Images">
             <h2 class="Project-Headers">
                 <mark class="Project-Headers-Background">Mistakes Made:</mark>
             </h2>
@@ -81,15 +81,15 @@
             </h2>
             <ul class="Skills-List">
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="python.png" alt="Python Logo">
+                    <img class="Skills-Icons" src="pictures/python.png" alt="Python Logo">
                     <p class="Skills-Desc">Python</p>
                 </li>
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="HardwareIcon.png" alt="Hardware Logo">
+                    <img class="Skills-Icons" src="pictures/HardwareIcon.png" alt="Hardware Logo">
                     <p class="Skills-Desc">Hardware</p>
                 </li>
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="CAD.png" alt="CAD Logo">
+                    <img class="Skills-Icons" src="pictures/CAD.png" alt="CAD Logo">
                     <p class="Skills-Desc">CAD</p>
                 </li>
             </ul>
@@ -99,22 +99,22 @@
         <ul class="Socials-List">
             <li class="Socials-Item">
                 <a href="https://www.linkedin.com/in/marcodava/">
-                    <img class="Socials-Icons" src="linkedin.png" alt="LinkedIn Logo">
+                    <img class="Socials-Icons" src="pictures/linkedin.png" alt="LinkedIn Logo">
                 </a>
             </li>
             <li class="Socials-Item">
                 <a href="https://github.com/MarcoDava">
-                    <img class="Socials-Icons" src="63de5479e8eb4676570c49e2579cab01.jpg" alt="Github Logo">
+                    <img class="Socials-Icons" src="pictures/63de5479e8eb4676570c49e2579cab01.jpg" alt="Github Logo">
                 </a>
             </li>
             <li class="Socials-Item">
                 <a href="https://mail.google.com/mail/?view=cm&fs=1&to=marco.a.dava@gmail.com&su=Hey There!&body=Email whatever you desire">
-                    <img class="Socials-Icons" src="325a4bd7b5041b4455e9a0b64c92190d.png" alt="Gmail Logo">
+                    <img class="Socials-Icons" src="pictures/325a4bd7b5041b4455e9a0b64c92190d.png" alt="Gmail Logo">
                 </a>
             </li>
             <li class="Socials-Item">
                 <a href="https://leetcode.com/u/MarcoDava/">
-                    <img class="Socials-Icons" src="leetcode-icon-430x512-6l72chsk-modified.png" alt="Leetcode Logo">
+                    <img class="Socials-Icons" src="pictures/leetcode-icon-430x512-6l72chsk-modified.png" alt="Leetcode Logo">
                 </a>
             </li>
         </ul>
