--- a/Projects.html
+++ b/Projects.html
@@ -5,12 +5,12 @@
     <title>Marco's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="PortfolioStyle.css">
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
-    <link rel="icon" href="M (1).png">
+    <link rel="icon" href="pictures/M (1).png">
 </head>
 <body>
     <header>
         <nav>
-            <img class="logo" src="M (1).png">
+            <img class="logo" src="pictures/M (1).png">
             <ul class="nav-list">
                 
                 <li class="nav-item"> 
@@ -53,7 +53,7 @@
                         ScriptSense
                     </p>
                     <a href="Project1.html">
-                        <img class="Project-Image" src="360_F_954073836_VOtTsC5J8KNoiWMXYY5JxfwfaXproZoj.jpg" alt="Project 1">
+                        <img class="Project-Image" src="pictures/360_F_954073836_VOtTsC5J8KNoiWMXYY5JxfwfaXproZoj.jpg" alt="Project 1">
                     </a>
                     <p class="Project-Desc">
                         A Tensorflow Handwriting Recognition Web Application that can extract information from imported files.
@@ -64,7 +64,7 @@
                         Basra
                     </p>
                     <a href="Project2.html">
-                        <img class="Project-Image" src="simple-playing-cards-isolated-on-white-background-vector.jpg" alt="Project 2">
+                        <img class="Project-Image" src="pictures/simple-playing-cards-isolated-on-white-background-vector.jpg" alt="Project 2">
                     </a>
                     <p class="Project-Desc">
                         An interactive card game played on the console with a computer player algorithm, coded using C.
@@ -75,7 +75,7 @@
                         Tic Tac Toe
                     </p>
                     <a href="Project3.html">
-                        <img class="Project-Image" src="tic-tac-toe-game-symbol-icon-in-line-style-design-isolated-on-white-background-editable-stroke-free-vector.jpg" alt="Project 3">
+                        <img class="Project-Image" src="pictures/tic-tac-toe-game-symbol-icon-in-line-style-design-isolated-on-white-background-editable-stroke-free-vector.jpg" alt="Project 3">
                     </a>
                     <p class="Project-Desc">
                         An interactive console game that with an automatic computer player.
@@ -86,7 +86,7 @@
                         Q-Bot Pathing
                     </p>
                     <a href="Project4.html">
-                        <img class="Project-Image" src="Qbot.png" alt="Project 4">
+                        <img class="Project-Image" src="pictures/Qbot.png" alt="Project 4">
                     </a>
                     <p class="Project-Desc">
                         Coded a roomba to follow a line around in a loop and dumped an object at a specified location using python.
@@ -97,7 +97,7 @@
                         Q-Arm Algorithm
                     </p>
                     <a href="Project5.html">
-                        <img class="Project-Image" src="QArm.jpg" alt="Project 5">
+                        <img class="Project-Image" src="pictures/QArm.jpg" alt="Project 5">
                     </a>
                     <p class="Project-Desc">
                         Coded a robot arm to transfer medical containers into autoclaves, capable of being controlled by a user.
@@ -108,7 +108,7 @@
                         Math Mania
                     </p>
                     <a href="Project6.html">
-                        <img class="Project-Image" src="FastMathQuizLogo.png" alt="Project 6">
+                        <img class="Project-Image" src="pictures/FastMathQuizLogo.png" alt="Project 6">
                     </a>
                     <p class="Project-Desc">
                         An interactive GUI math game with simple operations and a timer. Stores scores in a leaderboard.
@@ -124,22 +124,22 @@
         <ul class="Socials-List">
             <li class="Socials-Item">
                 <a href="https://www.linkedin.com/in/marcodava/">
-                    <img class="Socials-Icons" src="linkedin.png" alt="LinkedIn Logo">
+                    <img class="Socials-Icons" src="pictures/linkedin.png" alt="LinkedIn Logo">
                 </a>
             </li>
             <li class="Socials-Item">
                 <a href="https://github.com/MarcoDava">
-                    <img class="Socials-Icons" src="63de5479e8eb4676570c49e2579cab01.jpg" alt="Github Logo">
+                    <img class="Socials-Icons" src="pictures/63de5479e8eb4676570c49e2579cab01.jpg" alt="Github Logo">
                 </a>
             </li>
             <li class="Socials-Item">
                 <a href="https://mail.google.com/mail/?view=cm&fs=1&to=marco.a.dava@gmail.com&su=Hey There!&body=Email whatever you desire">
-                    <img class="Socials-Icons" src="325a4bd7b5041b4455e9a0b64c92190d.png" alt="Gmail Logo">
+                    <img class="Socials-Icons" src="pictures/325a4bd7b5041b4455e9a0b64c92190d.png" alt="Gmail Logo">
                 </a>
             </li>
             <li class="Socials-Item">
                 <a href="https://leetcode.com/u/MarcoDava/">
-                    <img class="Socials-Icons" src="leetcode-icon-430x512-6l72chsk-modified.png" alt="Leetcode Logo">
+                    <img class="Socials-Icons" src="pictures/leetcode-icon-430x512-6l72chsk-modified.png" alt="Leetcode Logo">
                 </a>
             </li>
         </ul>
