--- a/Project1.html
+++ b/Project1.html
@@ -5,11 +5,11 @@
     <title>Marco's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="PortfolioStyle.css">
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
-    <link rel="icon" href="M (1).png">
+    <link rel="icon" href="pictures/M (1).png">
 </head>
 <body>
     <header>
-        <img class="logo" src="M (1).png">
+        <img class="logo" src="pictures/M (1).png">
         <nav>
             <ul class="nav-list">
                 <li class="nav-item">   
@@ -58,7 +58,7 @@
             <h2 class="Project-Headers">
                 <mark class="Project-Headers-Background">How I did it:</mark>
             </h2>
-            <img src="Handwriting-Rec.jpg" class="Project-Images">
+            <img src="pictures/Handwriting-Rec.jpg" class="Project-Images">
             <p class="Project1-Desc">
                 This project is heavily inspired by the various resources online. The model takes in the colored and white pixels, compressing the 
                 image or drawn letter into a lower resolution matrix of 1's and 0's. From this compression, the time taken to distinguish the letters 
@@ -83,27 +83,27 @@
             </h2>
             <ul class="Skills-List">
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="tensorflow.svg" alt="Tensorflow Logo">
+                    <img class="Skills-Icons" src="pictures/tensorflow.svg" alt="Tensorflow Logo">
                     <p class="Skills-Desc">Tensorflow</p>
                 </li>
                 <li class="Skills-Item">    
-                    <img class="Skills-Icons" src="python.png" alt="Python Logo">
+                    <img class="Skills-Icons" src="pictures/python.png" alt="Python Logo">
                     <p class="Skills-Desc">Python</p>    
                 </li>
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="flask.png" alt="Flask Logo">
+                    <img class="Skills-Icons" src="pictures/flask.png" alt="Flask Logo">
                     <p class="Skills-Desc">Flask</p>  
                 </li>
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="html.png" alt="HTML Logo">
+                    <img class="Skills-Icons" src="pictures/html.png" alt="HTML Logo">
                     <p class="Skills-Desc">HTML</p>  
                 </li>
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="java-script.png" alt="JS Logo">
+                    <img class="Skills-Icons" src="pictures/java-script.png" alt="JS Logo">
                     <p class="Skills-Desc">JavaScript</p>  
                 </li>
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="css-3.png" alt="CSS Logo">
+                    <img class="Skills-Icons" src="pictures/css-3.png" alt="CSS Logo">
                     <p class="Skills-Desc">CSS</p>  
                 </li>
             </ul>
@@ -113,22 +113,22 @@
         <ul class="Socials-List">
             <li class="Socials-Item">
                 <a href="https://www.linkedin.com/in/marcodava/">
-                    <img class="Socials-Icons" src="linkedin.png" alt="LinkedIn Logo">
+                    <img class="Socials-Icons" src="pictures/linkedin.png" alt="LinkedIn Logo">
                 </a>
             </li>
             <li class="Socials-Item">
                 <a href="https://github.com/MarcoDava">
-                    <img class="Socials-Icons" src="63de5479e8eb4676570c49e2579cab01.jpg" alt="Github Logo">
+                    <img class="Socials-Icons" src="pictures/63de5479e8eb4676570c49e2579cab01.jpg" alt="Github Logo">
                 </a>
             </li>
             <li class="Socials-Item">
                 <a href="https://mail.google.com/mail/?view=cm&fs=1&to=marco.a.dava@gmail.com&su=Hey There!&body=Email whatever you desire">
-                    <img class="Socials-Icons" src="325a4bd7b5041b4455e9a0b64c92190d.png" alt="Gmail Logo">
+                    <img class="Socials-Icons" src="pictures/325a4bd7b5041b4455e9a0b64c92190d.png" alt="Gmail Logo">
                 </a>
             </li>
             <li class="Socials-Item">
                 <a href="https://leetcode.com/u/MarcoDava/">
-                    <img class="Socials-Icons" src="leetcode-icon-430x512-6l72chsk-modified.png" alt="Leetcode Logo">
+                    <img class="Socials-Icons" src="pictures/leetcode-icon-430x512-6l72chsk-modified.png" alt="Leetcode Logo">
                 </a>
             </li>
         </ul>
