--- a/Project2.html
+++ b/Project2.html
@@ -5,11 +5,11 @@
     <title>Marco's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="PortfolioStyle.css">
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
-    <link rel="icon" href="M (1).png">
+    <link rel="icon" href="pictures/M (1).png">
 </head>
 <body>
     <header>
-        <img class="logo" src="M (1).png">
+        <img class="logo" src="pictures/M (1).png">
         <nav>
             <ul class="nav-list">
                 <li class="nav-item">   
@@ -48,7 +48,7 @@
                 To view the project, please view the <a href="https://github.com/MarcoDava/Basra-Card-Game" class="link">the Github repository</a>.
             </p>
             <! -- Add a picture of the web application here-->
-            <img src="BasraImage1.png" class="Project-Images">
+            <img src="pictures/BasraImage1.png" class="Project-Images">
             <br><br>
             <h1>Basra</h1>
             <p class="Marco-Desc">
@@ -89,19 +89,19 @@
             </h2>
             <ul class="Skills-List">
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="letter-c.png" alt="C Logo">
+                    <img class="Skills-Icons" src="pictures/letter-c.png" alt="C Logo">
                     <p class="Skills-Desc">C</p>
                 </li>
                 <li class="Skills-Item">    
-                    <img class="Skills-Icons" src="Git.png" alt="Git Logo">
+                    <img class="Skills-Icons" src="pictures/Git.png" alt="Git Logo">
                     <p class="Skills-Desc">Git</p>    
                 </li>
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="icons8-github.svg" alt="Github Logo">
+                    <img class="Skills-Icons" src="pictures/icons8-github.svg" alt="Github Logo">
                     <p class="Skills-Desc">Github</p>  
                 </li>
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="Linux.png" alt="Linux Logo">
+                    <img class="Skills-Icons" src="pictures/Linux.png" alt="Linux Logo">
                     <p class="Skills-Desc">Linux</p>  
                 </li>
             </ul>
@@ -111,22 +111,22 @@
         <ul class="Socials-List">
             <li class="Socials-Item">
                 <a href="https://www.linkedin.com/in/marcodava/">
-                    <img class="Socials-Icons" src="linkedin.png" alt="LinkedIn Logo">
+                    <img class="Socials-Icons" src="pictures/linkedin.png" alt="LinkedIn Logo">
                 </a>
             </li>
             <li class="Socials-Item">
                 <a href="https://github.com/MarcoDava">
-                    <img class="Socials-Icons" src="63de5479e8eb4676570c49e2579cab01.jpg" alt="Github Logo">
+                    <img class="Socials-Icons" src="pictures/63de5479e8eb4676570c49e2579cab01.jpg" alt="Github Logo">
                 </a>
             </li>
             <li class="Socials-Item">
                 <a href="https://mail.google.com/mail/?view=cm&fs=1&to=marco.a.dava@gmail.com&su=Hey There!&body=Email whatever you desire">
-                    <img class="Socials-Icons" src="325a4bd7b5041b4455e9a0b64c92190d.png" alt="Gmail Logo">
+                    <img class="Socials-Icons" src="pictures/325a4bd7b5041b4455e9a0b64c92190d.png" alt="Gmail Logo">
                 </a>
             </li>
             <li class="Socials-Item">
                 <a href="https://leetcode.com/u/MarcoDava/">
-                    <img class="Socials-Icons" src="leetcode-icon-430x512-6l72chsk-modified.png" alt="Leetcode Logo">
+                    <img class="Socials-Icons" src="pictures/leetcode-icon-430x512-6l72chsk-modified.png" alt="Leetcode Logo">
                 </a>
             </li>
         </ul>
