--- a/Project6.html
+++ b/Project6.html
@@ -5,11 +5,11 @@
     <title>Marco's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="PortfolioStyle.css">
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
-    <link rel="icon" href="M (1).png">
+    <link rel="icon" href="pictures/M (1).png">
 </head>
 <body>
     <header>
-        <img class="logo" src="M (1).png">
+        <img class="logo" src="pictures/M (1).png">
         <nav>
             <ul class="nav-list">
                 <li class="nav-item">   
@@ -60,7 +60,7 @@
                 connect all the functions together seamlessly
             </p>
             <br>
-            <img src="MathQuizGame.png" class="Project-Images">
+            <img src="pictures/MathQuizGame.png" class="Project-Images">
             <h2 class="Project-Headers">
                 <mark class="Project-Headers-Background">Mistakes Made:</mark>
             </h2>
@@ -74,11 +74,11 @@
             </h2>
             <ul class="Skills-List">
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="java.png" alt="JavaFX Logo">
+                    <img class="Skills-Icons" src="pictures/java.png" alt="JavaFX Logo">
                     <p class="Skills-Desc">JavaFx</p>
                 </li>
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="java.png" alt="Java Logo">
+                    <img class="Skills-Icons" src="pictures/java.png" alt="Java Logo">
                     <p class="Skills-Desc">Java</p>
                 </li>
             </ul>
@@ -88,22 +88,22 @@
         <ul class="Socials-List">
             <li class="Socials-Item">
                 <a href="https://www.linkedin.com/in/marcodava/">
-                    <img class="Socials-Icons" src="linkedin.png" alt="LinkedIn Logo">
+                    <img class="Socials-Icons" src="pictures/linkedin.png" alt="LinkedIn Logo">
                 </a>
             </li>
             <li class="Socials-Item">
                 <a href="https://github.com/MarcoDava">
-                    <img class="Socials-Icons" src="63de5479e8eb4676570c49e2579cab01.jpg" alt="Github Logo">
+                    <img class="Socials-Icons" src="pictures/63de5479e8eb4676570c49e2579cab01.jpg" alt="Github Logo">
                 </a>
             </li>
             <li class="Socials-Item">
                 <a href="https://mail.google.com/mail/?view=cm&fs=1&to=marco.a.dava@gmail.com&su=Hey There!&body=Email whatever you desire">
-                    <img class="Socials-Icons" src="325a4bd7b5041b4455e9a0b64c92190d.png" alt="Gmail Logo">
+                    <img class="Socials-Icons" src="pictures/325a4bd7b5041b4455e9a0b64c92190d.png" alt="Gmail Logo">
                 </a>
             </li>
             <li class="Socials-Item">
                 <a href="https://leetcode.com/u/MarcoDava/">
-                    <img class="Socials-Icons" src="leetcode-icon-430x512-6l72chsk-modified.png" alt="Leetcode Logo">
+                    <img class="Socials-Icons" src="pictures/leetcode-icon-430x512-6l72chsk-modified.png" alt="Leetcode Logo">
                 </a>
             </li>
         </ul>
