--- a/Skills.html
+++ b/Skills.html
@@ -5,12 +5,12 @@
     <title>Marco's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="PortfolioStyle.css">
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
-    <link rel="icon" href="M (1).png">
+    <link rel="icon" href="pictures/M (1).png">
 </head>
 <body>
     <header>
         <nav>
-            <img class="logo" src="M (1).png">
+            <img class="logo" src="pictures/M (1).png">
             <ul class="nav-list">
                 
                 <li class="nav-item"> 
@@ -48,35 +48,35 @@
             <p class="Marco-Skills">Languages:</p>
             <ul class="Skills-List">
                 <li class="Skills-Item">        
-                    <img class="Skills-Icons" src="java.png" alt="Java Logo">
+                    <img class="Skills-Icons" src="pictures/java.png" alt="Java Logo">
                     <p class="Skills-Desc">Java</p>
                 </li>
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="python.png" alt="Python Logo">
+                    <img class="Skills-Icons" src="pictures/python.png" alt="Python Logo">
                     <p class="Skills-Desc">Python</p>
                 </li>
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="letter-c.png" alt="C Logo">
+                    <img class="Skills-Icons" src="pictures/letter-c.png" alt="C Logo">
                     <p class="Skills-Desc">C</p>
                 </li>
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="hashtag.png" alt="C# Logo">
+                    <img class="Skills-Icons" src="pictures/hashtag.png" alt="C# Logo">
                     <p class="Skills-Desc">C#</p>
                 </li>
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="java-script.png" alt="JavaScript Logo">
+                    <img class="Skills-Icons" src="pictures/java-script.png" alt="JavaScript Logo">
                     <p class="Skills-Desc">JavaScript</p>
                 </li>
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="html.png" alt="HTML Logo">
+                    <img class="Skills-Icons" src="pictures/html.png" alt="HTML Logo">
                     <p class="Skills-Desc">HTML</p>
                 </li>                
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="css-3.png" alt="CSS Logo">
+                    <img class="Skills-Icons" src="pictures/css-3.png" alt="CSS Logo">
                     <p class="Skills-Desc">CSS</p>
                 </li>
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="admin.png" alt="Bash Logo">
+                    <img class="Skills-Icons" src="pictures/admin.png" alt="Bash Logo">
                     <p class="Skills-Desc">Bash</p>
                 </li>
             </ul>
@@ -84,15 +84,15 @@
             <p class="Marco-Skills">Libraries:</p>
             <ul class="Skills-List">
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="numpy-icon-1916x2048-tfkpnjo6.png" alt="Numpy Logo">
+                    <img class="Skills-Icons" src="pictures/numpy-icon-1916x2048-tfkpnjo6.png" alt="Numpy Logo">
                     <p class="Skills-Desc">Numpy</p>
                 </li>
                 <li class="Skills-Item">    
-                    <img class="Skills-Icons" src="tensorflow.svg" alt="Tensorflow Logo">
+                    <img class="Skills-Icons" src="pictures/tensorflow.svg" alt="Tensorflow Logo">
                     <p class="Skills-Desc">Tensorflow</p>    
                 </li>
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="pandas.svg" alt="Pandas Logo">
+                    <img class="Skills-Icons" src="pictures/pandas.svg" alt="Pandas Logo">
                     <p class="Skills-Desc">Pandas</p>  
                 </li>
             </ul>
@@ -100,11 +100,11 @@
             <p class="Marco-Skills">Frameworks:</p>
             <ul class="Skills-List">
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="java.png" alt="JavaFX Logo">
+                    <img class="Skills-Icons" src="pictures/java.png" alt="JavaFX Logo">
                     <p class="Skills-Desc">JavaFX</p>
                 </li>
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="flask.png" alt="Flask Logo">
+                    <img class="Skills-Icons" src="pictures/flask.png" alt="Flask Logo">
                     <p class="Skills-Desc">Flask</p>  
                 </li>
             </ul>
@@ -112,23 +112,23 @@
             <p class="Marco-Skills">Developer Tools:</p>
             <ul class="Skills-List">
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="icons8-github.svg" alt="Github Logo">
+                    <img class="Skills-Icons" src="pictures/icons8-github.svg" alt="Github Logo">
                     <p class="Skills-Desc">Github</p>
                 </li>
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="Maven.png" alt="Maven Logo">
+                    <img class="Skills-Icons" src="pictures/Maven.png" alt="Maven Logo">
                     <p class="Skills-Desc">Maven</p>  
                 </li>
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="Linux.png" alt="Linux Logo">
+                    <img class="Skills-Icons" src="pictures/Linux.png" alt="Linux Logo">
                     <p class="Skills-Desc">Linux</p>  
                 </li>
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="Git.png" alt="Git Logo">
+                    <img class="Skills-Icons" src="pictures/Git.png" alt="Git Logo">
                     <p class="Skills-Desc">Git</p>  
                 </li>
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="visual-studio-code-icon-512x510-jfeof688.png" alt="VsCode Logo">
+                    <img class="Skills-Icons" src="pictures/visual-studio-code-icon-512x510-jfeof688.png" alt="VsCode Logo">
                     <p class="Skills-Desc">VSCode</p>  
                 </li>
             </ul>
@@ -136,11 +136,11 @@
             <p class="Marco-Skills">Technical Skills:</p>
             <ul class="Skills-List">
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="HardwareIcon.png" alt="Hardware Logo">
+                    <img class="Skills-Icons" src="pictures/HardwareIcon.png" alt="Hardware Logo">
                     <p class="Skills-Desc">Hardware</p>
                 </li>
                 <li class="Skills-Item">
-                    <img class="Skills-Icons" src="CAD.png" alt="CAD Logo">
+                    <img class="Skills-Icons" src="pictures/CAD.png" alt="CAD Logo">
                     <p class="Skills-Desc">CAD</p>
                 </li>
             </ul>
@@ -152,22 +152,22 @@
         <ul class="Socials-List">
             <li class="Socials-Item">
                 <a href="https://www.linkedin.com/in/marcodava/">
-                    <img class="Socials-Icons" src="linkedin.png" alt="LinkedIn Logo">
+                    <img class="Socials-Icons" src="pictures/linkedin.png" alt="LinkedIn Logo">
                 </a>
             </li>
             <li class="Socials-Item">
                 <a href="https://github.com/MarcoDava">
-                    <img class="Socials-Icons" src="63de5479e8eb4676570c49e2579cab01.jpg" alt="Github Logo">
+                    <img class="Socials-Icons" src="pictures/63de5479e8eb4676570c49e2579cab01.jpg" alt="Github Logo">
                 </a>
             </li>
             <li class="Socials-Item">
                 <a href="https://mail.google.com/mail/?view=cm&fs=1&to=marco.a.dava@gmail.com&su=Hey There!&body=Email whatever you desire">
-                    <img class="Socials-Icons" src="325a4bd7b5041b4455e9a0b64c92190d.png" alt="Gmail Logo">
+                    <img class="Socials-Icons" src="pictures/325a4bd7b5041b4455e9a0b64c92190d.png" alt="Gmail Logo">
                 </a>
             </li>
             <li class="Socials-Item">
                 <a href="https://leetcode.com/u/MarcoDava/">
-                    <img class="Socials-Icons" src="leetcode-icon-430x512-6l72chsk-modified.png" alt="Leetcode Logo">
+                    <img class="Socials-Icons" src="pictures/leetcode-icon-430x512-6l72chsk-modified.png" alt="Leetcode Logo">
                 </a>
             </li>
         </ul>
