--- a/Portfolio.html
+++ b/Portfolio.html
@@ -200,6 +200,10 @@
                     <img class="Skills-Icons" src="pictures/admin.png" alt="Bash Logo">
                     <p class="Skills-Desc">Bash</p>
                 </li>
+                <li class="Skills-Item">
+                    <img class="Skills-Icons" src="pictures/TypeScriptIcon.svg" alt="TypeScript Logo">
+                    <p class="Skills-Desc">TypeScript</p>  
+                </li>
             </ul>
             <br>
             <p class="Marco-Skills">Libraries:</p>
@@ -215,6 +219,10 @@
                 <li class="Skills-Item">
                     <img class="Skills-Icons" src="pictures/pandas.svg" alt="Pandas Logo">
                     <p class="Skills-Desc">Pandas</p>  
+                </li>
+                <li class="Skills-Item">
+                    <img class="Skills-Icons" src="pictures/react-icon-512x456-5xl7nmtw.png" alt="React Logo">
+                    <p class="Skills-Desc">React</p>  
                 </li>
             </ul>
             <br>
