Added ability to adapt to smaller screens

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -54,13 +54,16 @@
             </h1>
             <div class="Picture-Of-Marco">
                 <img class="Personal-Picture" src="pictures/Personal_Picture.jpg" alt="Picture of Marco">
-             </div>
-            <p class="Marco-Desc">
-                A Second Year McMaster Software Engineering Student, with a strong foundation in web development 
-                and experience in collaborative enviroments.<br><br>
-
-                Visit my socials:
-            </p>
+                <div class="wrapping-text">
+                    <p class="Marco-Desc">
+                        A Second Year McMaster Software Engineering Student, with a strong foundation in web development 
+                        and experience in collaborative enviroments.<br><br>
+        
+                        Visit my socials:
+                    </p>
+                </div>
+            </div>
+            
             <ul class="Socials-List">
                 <li class="Socials-Item">
                     <a href="https://www.linkedin.com/in/marcodava/">
